--- a/formulaire.html
+++ b/formulaire.html
@@ -29,7 +29,7 @@
 				<input  class="Products" type="file" accept="#.pdf"/>
 				<br><br>
 
-				<button type="submit"><a href="liste.html">Envoyer formulaire</button>
+				<button type="submit"><a href="projet4.html">Envoyer formulaire</button>
 
 
 
