--- a/projet1.html
+++ b/projet1.html
@@ -23,9 +23,9 @@
 
 				<nav>
 					<ul>
-						<li><a href="#">Accueil</a></li>
-						<li><a href="#">blog</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="portfolio.html">Accueil</a></li>
+						<li><a href="portfolio.html">blog</a></li>
+						<li><a href="portfolio.html">Contact</a></li>
 						
 					</ul>
 
