--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="port.css">
+	<link rel="stylesheet" type="text/css" href="portfolio.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>	
 		<title></title>
