--- a/projet2.html
+++ b/projet2.html
@@ -11,7 +11,7 @@
 		<h1>Ooops!! Page non trouvee.</h1>
 		<h2>404</h2>
 		<p>We can't find the page you're looking for</p>
-		<a href="#"> Go back home</a>
+		<a href="portfolio.html"> Go back home</a>
 
 	</div>
 
